# TransFinance

./: .gitignore  README.md  pyproject.toml
examples/: config.yaml
transfinance/: settings.py  tasks.py
transfinance/models/: candle.py  candles_broker.py  client.py
