[tool.poetry]
name = "transfinance"
version = "0.1.0"
description = ""
authors = ["erondondron <smirnov.andrey.serg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
